tests/error/region_ambiguous_caller_slots.vow
// TEST: error-code RegionConflict
module RegionAmbiguousCallerSlots

pub struct Item {
    name: String,
}

pub struct Arena {
    entries: Vec<Item>,
}

fn push_to_arena(arena: Arena, item: Item) {
    arena.entries.push(item);
}

fn put_both(short: Arena, long: Arena) {
    let item: Item = Item { name: String::from("SHARED") };
    push_to_arena(short, item);
    push_to_arena(long, item);
}

fn inner(long: Arena) {
    let short: Arena = Arena { entries: Vec::new() };
    put_both(short, long);
}

fn main() -> i32 {
    let long: Arena = Arena { entries: Vec::new() };
    inner(long);
    0
}
